--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
   <main class="card" role="main" aria-label="페이지 준비중">
     <h1>now developing<span class="dotdotdot"></span></h1>
-    <p>곧 만나요.</p>
+    <p>See you soon.</p>
   </main>
   <footer>
     © <span id="y"></span>
