--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <p>See you soon.</p>
   </main>
   <footer>
-    © <span id="y"></span>
+    © Peroro Edu <span id="y"></span>
   </footer>
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
