--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -57,8 +57,12 @@
       <h2>제 7 조 (정책 변경)</h2>
       <p>본 방침은 관련 법령 및 서비스 변경 사항을 반영하기 위해 업데이트될 수 있습니다. 중대한 변경 시 최소 7일 전에 본 웹사이트를 통해 공지합니다.</p>
 
-      <h2>제 8 조 (연락처)</h2>
-      <p>본 프로젝트는 개인 개발 프로젝트로 별도의 이메일 문의 경로를 운영하지 않습니다. 개인정보 처리에 관한 문의는 본 페이지를 통해 공지되는 절차(FAQ/공지)로 안내될 수 있습니다.</p>
+<h2>제 8 조 (연락처)</h2>
+<p>
+  본 프로젝트는 개인 개발 프로젝트로, 개인정보 처리에 관한 모든 문의는 아래 이메일을 통해 접수받습니다.<br><br>
+  📧 문의 이메일: <a href="mailto:ppicomsi@gmail.com">ppicomsi@gmail.com</a><br><br>
+  기타 공지나 변경 사항은 본 페이지를 통해 안내됩니다.
+</p>
     </section>
 
     <footer>
