--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -25,44 +25,62 @@
   <main>
     <header>
       <h1>개인정보처리방침</h1>
-      <p class="muted">최종 업데이트: 2025-10-29</p>
+      <p class="muted">최종 업데이트: 2025-10-30</p>
     </header>
 
     <section class="card">
-      <h2>제 1 조 (처리 목적)</h2>
-      <p>“BruhAhhchive”(이하 “서비스”)는 이용자에게 멀티플레이 FPS 게임 기능을 제공하기 위해 필요한 범위에서만 개인정보를 처리합니다. 본 서비스는 이용자를 직접 식별할 수 있는 정보를 별도로 수집하지 않으며, 제3자에게 판매하거나 제공하지 않습니다.</p>
 
-      <h2>제 2 조 (처리하는 개인정보 항목 및 수집 방법)</h2>
+      <h2>제 1 조 (목적 및 적용 범위)</h2>
+      <p>본 개인정보처리방침은 “BruhAhhchive”(이하 “서비스”)가 제공하는 모든 온라인 콘텐츠 및 멀티플레이 FPS 게임 관련 기능에 적용됩니다. 서비스는 「개인정보 보호법」, 「정보통신망법」, 그리고 Epic Games의 데이터 보호 정책에 따라 이용자의 개인정보를 안전하게 처리합니다.</p>
+
+      <h2>제 2 조 (수집하는 개인정보 항목 및 방법)</h2>
       <ul>
-        <li><strong>직접 수집 항목:</strong> 없음(회원가입/이메일 수집 미사용)</li>
-        <li><strong>자동 수집 항목:</strong> 멀티플레이 서비스 제공을 위해 플랫폼에서 제공되는 <em>플랫폼 식별자(예: Epic Online Services 계정 ID)</em>가 처리될 수 있습니다. 해당 식별자는 매치메이킹, 세션 연결, 기본적인 부정행위 방지 및 운영 기록과 같은 <em>서비스 제공 목적</em>으로만 사용됩니다.</li>
+        <li><strong>직접 수집 항목:</strong> 없음 (회원가입, 이메일 수집, 상업적 가입 절차 미사용)</li>
+        <li><strong>자동 수집 항목:</strong> Epic Online Services(EOS) 플랫폼을 통해 <em>플랫폼 식별자(Epic Account ID)</em>, 세션 연결 로그, 매치메이킹 기록, 기본적인 시스템 정보(IP 주소, 접속 시간 등)가 자동 처리될 수 있습니다.</li>
+        <li><strong>수집 방법:</strong> Epic Games SDK 또는 Epic Online Services API를 통한 비식별 데이터 수집</li>
       </ul>
 
-      <h2>제 3 조 (보유 및 이용 기간)</h2>
-      <p>직접 수집되는 개인정보가 없으므로 별도의 보유 기간을 두지 않습니다. 플랫폼 식별자 등 필수 식별 정보는 서비스 제공에 필요한 기간 동안에만 보유되며, 서비스 종료 또는 관련 데이터가 더 이상 필요하지 않은 경우 지체 없이 파기합니다.</p>
-
-      <h2>제 4 조 (처리 위탁 및 제3자 제공)</h2>
-      <p>본 서비스는 자체적으로 개인정보를 제3자에게 제공하지 않습니다. 다만, 멀티플레이 기능을 위해 <strong>Epic Online Services(EOS)</strong>를 사용할 수 있으며, EOS가 제공하는 범위에서 계정 식별자 및 세션 관련 데이터가 처리될 수 있습니다. EOS의 데이터 처리에 대한 자세한 내용은 Epic Games의 정책을 참고하시기 바랍니다.</p>
-
-      <h2>제 5 조 (정보주체의 권리 행사)</h2>
-      <p>이용자는 자신의 개인정보에 대한 열람, 삭제, 처리정지 등을 요청할 수 있습니다. 본 서비스는 직접 수집하는 개인정보를 보유하지 않으므로, 플랫폼 계정 관련 요청은 해당 플랫폼(Epic 계정 등)의 고객지원 절차를 통해 처리될 수 있습니다.</p>
-
-      <h2>제 6 조 (안전성 확보조치)</h2>
+      <h2>제 3 조 (개인정보의 이용 목적)</h2>
       <ul>
-        <li>접속 권한 최소화, 접근 기록 관리</li>
-        <li>전송 구간 암호화(HTTPS) 사용</li>
-        <li>필요 최소한의 로그만 보관하며, 보존 기간 경과 시 지체 없이 파기</li>
+        <li>플레이어 인증 및 매치메이킹, 세션 연결</li>
+        <li>부정행위 탐지 및 서비스 안정화</li>
+        <li>운영 품질 향상 및 통계 분석</li>
+        <li>Epic Games 플랫폼과의 계정 연동 및 이용자 지원</li>
       </ul>
 
-      <h2>제 7 조 (정책 변경)</h2>
-      <p>본 방침은 관련 법령 및 서비스 변경 사항을 반영하기 위해 업데이트될 수 있습니다. 중대한 변경 시 최소 7일 전에 본 웹사이트를 통해 공지합니다.</p>
+      <h2>제 4 조 (개인정보의 제3자 제공 및 국제 이전)</h2>
+      <p>서비스는 직접 수집한 개인정보를 제3자에게 판매하거나 공유하지 않습니다. 다만, Epic Online Services(EOS)를 통해 다음과 같은 정보가 미국 및 기타 지역으로 전송·처리될 수 있습니다:</p>
+      <ul>
+        <li>플랫폼 계정 식별자, 세션 데이터, 게임 매치 기록</li>
+        <li>Epic Games, Inc. (미국 노스캐롤라이나주 캐리 소재)</li>
+      </ul>
+      <p>해외 이전은 Epic Games의 개인정보 보호정책(<a href="https://www.epicgames.com/site/en-US/privacypolicy" target="_blank">Epic Games Privacy Policy</a>)에 따라 이루어집니다.</p>
 
-<h2>제 8 조 (연락처)</h2>
-<p>
-  본 프로젝트는 개인 개발 프로젝트로, 개인정보 처리에 관한 모든 문의는 아래 이메일을 통해 접수받습니다.<br><br>
-  📧 문의 이메일: <a href="mailto:ppicomsi@gmail.com">ppicomsi@gmail.com</a><br><br>
-  기타 공지나 변경 사항은 본 페이지를 통해 안내됩니다.
-</p>
+      <h2>제 5 조 (개인정보 보유 및 파기)</h2>
+      <p>서비스는 이용자 식별을 위한 최소한의 데이터를 Epic 플랫폼을 통해 일시적으로만 보유합니다. 서비스 종료, 세션 만료 또는 목적 달성 시 해당 정보는 즉시 삭제됩니다.</p>
+
+      <h2>제 6 조 (아동의 개인정보 보호)</h2>
+      <p>본 서비스는 만 13세 미만 아동을 대상으로 하지 않으며, 아동의 개인정보를 의도적으로 수집하지 않습니다. 만약 아동의 정보가 부주의하게 수집된 사실이 확인되면 즉시 삭제 조치를 취합니다.</p>
+
+      <h2>제 7 조 (이용자의 권리와 행사방법)</h2>
+      <p>이용자는 Epic 계정 또는 관련 플랫폼의 개인정보 설정 페이지를 통해 열람, 정정, 삭제, 처리정지 등의 권리를 행사할 수 있습니다. 서비스 자체적으로 수집된 데이터가 없거나 비식별화된 데이터만 처리하므로, 대부분의 요청은 Epic Games를 통해 진행됩니다.</p>
+
+      <h2>제 8 조 (안전성 확보 조치)</h2>
+      <ul>
+        <li>HTTPS 기반 암호화 통신 적용</li>
+        <li>접근 권한 최소화 및 로그 기록 관리</li>
+        <li>데이터 접근 제한 및 자동 로그 파기 절차 운영</li>
+      </ul>
+
+      <h2>제 9 조 (정책 변경 및 공지)</h2>
+      <p>본 방침은 법령, 정책, 기술 변화에 따라 변경될 수 있습니다. 중요한 변경이 있을 경우 최소 7일 전 본 페이지 또는 공지사항을 통해 안내합니다.</p>
+
+      <h2>제 10 조 (연락처 및 문의)</h2>
+      <p>본 프로젝트는 비상업적 개인 개발 프로젝트이며, 개인정보 관련 문의는 아래 이메일로 접수됩니다.<br><br>
+      📧 <a href="mailto:ppicomsi@gmail.com">ppicomsi@gmail.com</a><br>
+      🌐 Epic Games 정책 보기: <a href="https://www.epicgames.com/site/en-US/privacypolicy" target="_blank">https://www.epicgames.com/site/en-US/privacypolicy</a><br><br>
+      기타 공지 및 업데이트는 본 페이지를 통해 안내됩니다.</p>
+
     </section>
 
     <footer>
@@ -70,7 +88,7 @@
         <a href="/">홈</a>
         <a href="/privacy-policy.html">개인정보처리방침</a>
       </nav>
-      <div class="tiny">© 2025 BruhAhhchive — Fanmade, Non-commercial.</div>
+      <div class="tiny">© 2025 BruhAhhchive — Fanmade, Non-commercial. Linked with Epic Online Services.</div>
     </footer>
   </main>
 </body>
