--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,18 +7,18 @@
   <meta name="description" content="BruhAhhchive 개인정보처리방침" />
   <meta name="color-scheme" content="dark light" />
   <style>
-    :root { --bg: #0b0d10; --fg: #e8eef5; --muted:#9fb3c8; --card:#12151a; }
-    body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Noto Sans KR, Apple SD Gothic Neo, sans-serif; background: var(--bg); color: var(--fg); }
-    main { max-width: 900px; margin: 0 auto; padding: 32px 20px 64px; }
-    h1 { font-size: clamp(22px, 4vw, 34px); letter-spacing: -0.01em; margin: 8px 0 18px; }
-    h2 { margin-top: 28px; font-size: clamp(18px, 3vw, 22px); }
-    p, li { line-height: 1.7; color: var(--fg); }
-    .muted { color: var(--muted); }
-    .card { background: var(--card); border: 1px solid #1c2027; border-radius: 16px; padding: 18px; }
-    a { color: #84cc16; }
-    footer { border-top:1px solid #1c2027; margin-top:40px; padding:20px; font-size:14px; color: var(--muted); display:flex; gap:12px; flex-wrap:wrap; justify-content:space-between; align-items:center; }
-    footer nav a { color: var(--muted); text-decoration: none; margin-right:12px; }
-    .tiny { font-size: 12px; opacity: .8; }
+    :root { --bg:#0b0d10; --fg:#e8eef5; --muted:#9fb3c8; --card:#12151a; }
+    body { margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Noto Sans KR,Apple SD Gothic Neo,sans-serif; background:var(--bg); color:var(--fg);}
+    main { max-width:900px; margin:0 auto; padding:32px 20px 64px; }
+    h1 { font-size:clamp(22px,4vw,34px); letter-spacing:-0.01em; margin:8px 0 18px; }
+    h2 { margin-top:28px; font-size:clamp(18px,3vw,22px); }
+    p, li { line-height:1.7; color:var(--fg); }
+    .muted { color:var(--muted); }
+    .card { background:var(--card); border:1px solid #1c2027; border-radius:16px; padding:18px; }
+    a { color:#84cc16; }
+    footer { border-top:1px solid #1c2027; margin-top:40px; padding:20px; font-size:14px; color:var(--muted); display:flex; gap:12px; flex-wrap:wrap; justify-content:space-between; align-items:center; }
+    footer nav a { color:var(--muted); text-decoration:none; margin-right:12px; }
+    .tiny { font-size:12px; opacity:.8; }
   </style>
 </head>
 <body>
@@ -29,58 +29,33 @@
     </header>
 
     <section class="card">
+      <h2>제 1 조 (목적)</h2>
+      <p>“BruhAhhchive”(이하 “서비스”)는 개인이 취미로 개발한 비상업적 팬 프로젝트입니다. 본 서비스는 이용자의 개인정보를 수집·보관·이용하지 않으며, 회원가입이나 로그인 기능 또한 제공하지 않습니다.</p>
 
-      <h2>제 1 조 (목적 및 적용 범위)</h2>
-      <p>본 개인정보처리방침은 “BruhAhhchive”(이하 “서비스”)가 제공하는 모든 온라인 콘텐츠 및 멀티플레이 FPS 게임 관련 기능에 적용됩니다. 서비스는 「개인정보 보호법」, 「정보통신망법」, 그리고 Epic Games의 데이터 보호 정책에 따라 이용자의 개인정보를 안전하게 처리합니다.</p>
-
-      <h2>제 2 조 (수집하는 개인정보 항목 및 방법)</h2>
+      <h2>제 2 조 (개인정보의 수집 및 이용)</h2>
       <ul>
-        <li><strong>직접 수집 항목:</strong> 없음 (회원가입, 이메일 수집, 상업적 가입 절차 미사용)</li>
-        <li><strong>자동 수집 항목:</strong> Epic Online Services(EOS) 플랫폼을 통해 <em>플랫폼 식별자(Epic Account ID)</em>, 세션 연결 로그, 매치메이킹 기록, 기본적인 시스템 정보(IP 주소, 접속 시간 등)가 자동 처리될 수 있습니다.</li>
-        <li><strong>수집 방법:</strong> Epic Games SDK 또는 Epic Online Services API를 통한 비식별 데이터 수집</li>
+        <li>본 서비스는 이용자의 이름, 이메일, 연락처, 위치정보 등 어떠한 개인정보도 수집하지 않습니다.</li>
+        <li>쿠키, 로그, 추적 스크립트 등의 기술적 수단을 통한 정보 수집 또한 수행하지 않습니다.</li>
       </ul>
 
-      <h2>제 3 조 (개인정보의 이용 목적)</h2>
+      <h2>제 3 조 (데이터 보유 및 제3자 제공)</h2>
+      <p>서비스는 서버 측 저장소를 운영하지 않으며, 이용자 데이터를 제3자에게 제공하거나 위탁하지 않습니다.  
+      서비스 이용 과정에서 발생하는 임시 데이터(예: 세션 연결 정보)는 메모리상 일시적으로 처리되며, 저장되지 않습니다.</p>
+
+      <h2>제 4 조 (보안 및 접근)</h2>
       <ul>
-        <li>플레이어 인증 및 매치메이킹, 세션 연결</li>
-        <li>부정행위 탐지 및 서비스 안정화</li>
-        <li>운영 품질 향상 및 통계 분석</li>
-        <li>Epic Games 플랫폼과의 계정 연동 및 이용자 지원</li>
+        <li>본 서비스는 HTTPS를 사용하여 사이트 연결 구간을 암호화합니다.</li>
+        <li>데이터베이스나 외부 로그 시스템을 사용하지 않으므로, 개인정보 유출의 위험이 없습니다.</li>
       </ul>
 
-      <h2>제 4 조 (개인정보의 제3자 제공 및 국제 이전)</h2>
-      <p>서비스는 직접 수집한 개인정보를 제3자에게 판매하거나 공유하지 않습니다. 다만, Epic Online Services(EOS)를 통해 다음과 같은 정보가 미국 및 기타 지역으로 전송·처리될 수 있습니다:</p>
-      <ul>
-        <li>플랫폼 계정 식별자, 세션 데이터, 게임 매치 기록</li>
-        <li>Epic Games, Inc. (미국 노스캐롤라이나주 캐리 소재)</li>
-      </ul>
-      <p>해외 이전은 Epic Games의 개인정보 보호정책(<a href="https://www.epicgames.com/site/en-US/privacypolicy" target="_blank">Epic Games Privacy Policy</a>)에 따라 이루어집니다.</p>
+      <h2>제 5 조 (연락 및 문의)</h2>
+      <p>본 프로젝트는 비상업적 팬 제작물로, 개인정보 관련 문의는 아래 이메일로 연락 가능합니다.<br><br>
+      📧 <a href="mailto:ppicomsi@gmail.com">ppicomsi@gmail.com</a><br><br>
+      해당 페이지는 이용자의 개인 정보를 수집하지 않음을 증명하기 위한 안내 페이지입니다.</p>
 
-      <h2>제 5 조 (개인정보 보유 및 파기)</h2>
-      <p>서비스는 이용자 식별을 위한 최소한의 데이터를 Epic 플랫폼을 통해 일시적으로만 보유합니다. 서비스 종료, 세션 만료 또는 목적 달성 시 해당 정보는 즉시 삭제됩니다.</p>
-
-      <h2>제 6 조 (아동의 개인정보 보호)</h2>
-      <p>본 서비스는 만 13세 미만 아동을 대상으로 하지 않으며, 아동의 개인정보를 의도적으로 수집하지 않습니다. 만약 아동의 정보가 부주의하게 수집된 사실이 확인되면 즉시 삭제 조치를 취합니다.</p>
-
-      <h2>제 7 조 (이용자의 권리와 행사방법)</h2>
-      <p>이용자는 Epic 계정 또는 관련 플랫폼의 개인정보 설정 페이지를 통해 열람, 정정, 삭제, 처리정지 등의 권리를 행사할 수 있습니다. 서비스 자체적으로 수집된 데이터가 없거나 비식별화된 데이터만 처리하므로, 대부분의 요청은 Epic Games를 통해 진행됩니다.</p>
-
-      <h2>제 8 조 (안전성 확보 조치)</h2>
-      <ul>
-        <li>HTTPS 기반 암호화 통신 적용</li>
-        <li>접근 권한 최소화 및 로그 기록 관리</li>
-        <li>데이터 접근 제한 및 자동 로그 파기 절차 운영</li>
-      </ul>
-
-      <h2>제 9 조 (정책 변경 및 공지)</h2>
-      <p>본 방침은 법령, 정책, 기술 변화에 따라 변경될 수 있습니다. 중요한 변경이 있을 경우 최소 7일 전 본 페이지 또는 공지사항을 통해 안내합니다.</p>
-
-      <h2>제 10 조 (연락처 및 문의)</h2>
-      <p>본 프로젝트는 비상업적 개인 개발 프로젝트이며, 개인정보 관련 문의는 아래 이메일로 접수됩니다.<br><br>
-      📧 <a href="mailto:ppicomsi@gmail.com">ppicomsi@gmail.com</a><br>
-      🌐 Epic Games 정책 보기: <a href="https://www.epicgames.com/site/en-US/privacypolicy" target="_blank">https://www.epicgames.com/site/en-US/privacypolicy</a><br><br>
-      기타 공지 및 업데이트는 본 페이지를 통해 안내됩니다.</p>
-
+      <h2>제 6 조 (정책 변경)</h2>
+      <p>서비스 내용이 변경되거나 관련 법령이 개정될 경우 본 방침은 수정될 수 있습니다.  
+      변경사항은 본 페이지에 즉시 반영됩니다.</p>
     </section>
 
     <footer>
@@ -88,7 +63,7 @@
         <a href="/">홈</a>
         <a href="/privacy-policy.html">개인정보처리방침</a>
       </nav>
-      <div class="tiny">© 2025 BruhAhhchive — Fanmade, Non-commercial. Linked with Epic Online Services.</div>
+      <div class="tiny">© 2025 BruhAhhchive — Fanmade, Non-commercial. This site does not collect personal data.</div>
     </footer>
   </main>
 </body>
