--- a/index.html
+++ b/index.html
@@ -3,33 +3,39 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BruhAhhchive — 대규모 학원 멀티플레이 FPS</title>
-  <meta name="description" content="BruhAhhchive는 블루아카이브 세계관을 바탕으로 한 1인칭 멀티플레이 게임입니다. 키보토스에서 대규모 학원 슈터를 경험해 보세요." />
-  <meta property="og:title" content="BruhAhhchive" />
-  <meta property="og:description" content="블루아카이브의 2차창작 1인칭 멀티플레이 게임. 키보토스에 뛰어들어 대규모 학원 슈터를 경험하세요." />
+  <title>BruhAhhchive — 대규모 학원 멀티플레이 FPS | Fanmade by peroroedu</title>
+  <meta name="description" content="BruhAhhchive는 블루아카이브 세계관을 바탕으로 한 1인칭 멀티플레이 팬 FPS입니다. 키보토스에서 대규모 학원 슈터를 경험해 보세요. Fanmade by peroroedu." />
+
+  <!-- 🌐 English Metadata -->
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:title" content="BruhAhhchive — Large-Scale Academy Multiplayer FPS (Fanmade by peroroedu)" />
+  <meta property="og:description" content="A non-commercial fanmade multiplayer FPS inspired by Blue Archive. Dive into Kivotos and experience large-scale academy battles. Created by peroroedu." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://bruhahhchive.site/" />
+  <meta property="og:image" content="https://bruhahhchive.site/assets/hero.jpg" />
   <meta name="color-scheme" content="dark light" />
+
   <style>
-    :root { --bg: #0b0d10; --fg: #e8eef5; --muted:#9fb3c8; --accent:#84cc16; --card:#12151a; }
-    * { box-sizing: border-box; }
-    body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Noto Sans KR, Apple SD Gothic Neo, sans-serif; background: var(--bg); color: var(--fg); }
+    :root { --bg:#0b0d10; --fg:#e8eef5; --muted:#9fb3c8; --accent:#3b82f6; --card:#12151a; }
+    * { box-sizing:border-box; }
+    body { margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Noto Sans KR,Apple SD Gothic Neo,sans-serif; background:var(--bg); color:var(--fg); }
     header { position:relative; overflow:hidden; text-align:center; }
     header img.hero-bg { width:100%; height:60vh; object-fit:cover; filter:brightness(0.4); }
     header .overlay { position:absolute; inset:0; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center; }
-    header h1 { font-size: clamp(28px, 5vw, 44px); margin: 0; }
-    header p { color: var(--muted); margin-top: 12px; }
+    header h1 { font-size:clamp(28px,5vw,44px); margin:0; }
+    header p { color:var(--muted); margin-top:12px; }
     .pill { display:inline-block; margin-bottom:12px; padding:6px 12px; border-radius:999px; background:#1c2027; color:#cfe4ff; font-size:12px; letter-spacing:.02em; }
-    .container { max-width: 1080px; margin: 0 auto; padding: 40px 20px 64px; }
-    .grid { display:grid; gap:20px; grid-template-columns:repeat(auto-fit, minmax(320px,1fr)); }
-    .card { background: var(--card); border: 1px solid #1c2027; border-radius: 16px; overflow:hidden; }
+    .container { max-width:1080px; margin:0 auto; padding:40px 20px 64px; }
+    .grid { display:grid; gap:20px; grid-template-columns:repeat(auto-fit,minmax(320px,1fr)); }
+    .card { background:var(--card); border:1px solid #1c2027; border-radius:16px; overflow:hidden; }
     .card img { width:100%; height:220px; object-fit:cover; }
     .card-content { padding:18px; }
-    h2 { font-size: clamp(22px, 3vw, 28px); margin-top:48px; margin-bottom:16px; }
-    .muted { color: var(--muted); }
-    a.button { display:inline-block; margin-top:14px; padding:12px 16px; border-radius:12px; background: var(--accent); color:#0b0d10; text-decoration:none; font-weight:600; }
-    footer { border-top:1px solid #1c2027; margin-top:60px; padding:20px; font-size:14px; color: var(--muted); display:flex; gap:12px; flex-wrap:wrap; justify-content:space-between; align-items:center; }
-    footer nav a { color: var(--muted); text-decoration:none; margin-right:12px; }
+    h2 { font-size:clamp(22px,3vw,28px); margin-top:48px; margin-bottom:16px; }
+    .muted { color:var(--muted); }
+    a.button { display:inline-block; margin-top:14px; padding:12px 16px; border-radius:12px; background:var(--accent); color:#0b0d10; text-decoration:none; font-weight:600; transition:background .2s; }
+    a.button:hover { background:#2563eb; }
+    footer { border-top:1px solid #1c2027; margin-top:60px; padding:20px; font-size:14px; color:var(--muted); display:flex; gap:12px; flex-wrap:wrap; justify-content:space-between; align-items:center; }
+    footer nav a { color:var(--muted); text-decoration:none; margin-right:12px; }
     .tiny { font-size:12px; opacity:.8; }
   </style>
 </head>
@@ -47,7 +53,9 @@
   <main class="container">
     <section id="about">
       <p class="muted">
-        BruhAhhchive는 블루아카이브 세계관에서 영감을 받은 비상업적 팬메이드 프로젝트로, 친구들과 함께 즐기는 멀티플레이 FPS 경험을 목표로 합니다.
+        <strong>BruhAhhchive</strong>는 블루아카이브 세계관에서 영감을 받은 비상업적 팬메이드 프로젝트로, 친구들과 함께 즐기는 멀티플레이 FPS 경험을 목표로 합니다.<br><br>
+        📺 <a href="https://www.youtube.com/@peroro-education" target="_blank">제작자 YouTube 채널</a><br>
+        ✉️ 문의: <a href="mailto:ppicomsi@gmail.com">ppicomsi@gmail.com</a>
       </p>
     </section>
 
@@ -65,18 +73,17 @@
           <img src="assets/loadout.jpg" alt="커스터마이징 UI">
           <div class="card-content">
             <h3>커스터마이징</h3>
-            <p class="muted">커스터마이징 가능한 캐릭터와 장비들. 플레이 스타일에 맞춘 로드아웃 구성.</p>
+            <p class="muted">플레이 스타일에 맞춘 캐릭터 및 장비 커스터마이징. 자신만의 로드아웃을 구성하세요.</p>
           </div>
         </article>
       </div>
     </section>
 
-
     <section id="status">
       <h2>개발 현황</h2>
       <div class="card">
         <div class="card-content">
-          <p class="muted">현재 비공식 테스트 단계입니다. 배포 시점과 빌드 정보는 본 사이트에 공지됩니다.</p>
+          <p class="muted">현재 비공식 테스트 단계입니다. 빌드 및 개발 정보는 본 사이트를 통해 추후 공개될 예정입니다.</p>
         </div>
       </div>
     </section>
@@ -86,8 +93,5 @@
     <nav>
       <a href="/privacy-policy.html">개인정보처리방침</a>
       <a href="/">홈</a>
-    </nav>
-    <div class="tiny">© 2025 BruhAhhchive — Fanmade, Non-commercial.</div>
-  </footer>
-</body>
-</html>
+      <a href="https://www.youtube.com/@peroro-education" target="_blank">YouTube</a>
+      <a href="mailto:ppicomsi
