--- a/BrAh.html
+++ b/BrAh.html
@@ -55,7 +55,7 @@
       <p class="muted">
         <strong>BruhAhhchive</strong>는 블루아카이브 세계관에서 영감을 받은 비상업적 팬메이드 프로젝트로, 친구들과 함께 즐기는 멀티플레이 FPS 경험을 목표로 합니다.<br><br>
         📺 <a href="https://www.youtube.com/@peroro-education" target="_blank">제작자 YouTube 채널</a><br>
-        ✉️ 문의: <a href="mailto:ppicomsi@gmail.com">ppicomsi@gmail.com</a>
+        ✉️ 문의: <a href="mailto:peroroedu@gmail.com">peroroedu@gmail.com</a>
       </p>
     </section>
 
