--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -50,7 +50,7 @@
 
       <h2>제 5 조 (연락 및 문의)</h2>
       <p>본 프로젝트는 비상업적 팬 제작물로, 개인정보 관련 문의는 아래 이메일로 연락 가능합니다.<br><br>
-      📧 <a href="mailto:ppicomsi@gmail.com">ppicomsi@gmail.com</a><br><br>
+      📧 <a href="mailto:peroroedu@gmail.com">peroroedu@gmail.com</a><br><br>
       해당 페이지는 이용자의 개인 정보를 수집하지 않음을 증명하기 위한 안내 페이지입니다.</p>
 
       <h2>제 6 조 (정책 변경)</h2>
