--- a/BrAh.html
+++ b/BrAh.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BruhAhhchive — 대규모 학원 멀티플레이 FPS | Fanmade by peroroedu</title>
-  <meta name="description" content="BruhAhhchive는 블루아카이브 세계관을 바탕으로 한 1인칭 멀티플레이 팬 FPS입니다. 키보토스에서 대규모 학원 슈터를 경험해 보세요. Fanmade by peroroedu." />
+  <title>BrokenArchive — 대규모 학원 멀티플레이 FPS | Fanmade by peroroedu</title>
+  <meta name="description" content="BrokenArchive는 블루아카이브 세계관을 바탕으로 한 1인칭 멀티플레이 팬 FPS입니다. 키보토스에서 대규모 학원 슈터를 경험해 보세요. Fanmade by peroroedu." />
 
   <!-- 🌐 English Metadata -->
   <meta property="og:locale" content="en_US" />
-  <meta property="og:title" content="BruhAhhchive — Large-Scale Academy Multiplayer FPS (Fanmade by peroroedu)" />
+  <meta property="og:title" content="BrokenArchive — Large-Scale Academy Multiplayer FPS (Fanmade by peroroedu)" />
   <meta property="og:description" content="A non-commercial fanmade multiplayer FPS inspired by Blue Archive. Dive into Kivotos and experience large-scale academy battles. Created by peroroedu." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://bruhahhchive.site/" />
-  <meta property="og:image" content="https://bruhahhchive.site/assets/hero.jpg" />
+  <meta property="og:url" content="https://perorogaming.online/BrAh" />
+  <meta property="og:image" content="https://perorogaming.online/assets/hero.jpg" />
   <meta name="color-scheme" content="dark light" />
 
   <style>
@@ -43,7 +43,7 @@
   <header>
     <img src="assets/hero.jpg" alt="키보토스 전장 이미지" class="hero-bg">
     <div class="overlay">
-      <div class="pill">BruhAhhchive</div>
+      <div class="pill">BrokenArchive</div>
       <h1>키보토스에 뛰어들어<br>대규모 학원 멀티플레이 슈터를 경험하세요</h1>
       <p>블루아카이브의 2차창작 1인칭 멀티플레이 게임입니다.</p>
       <a href="#features" class="button">주요 특징 보기</a>
@@ -53,7 +53,7 @@
   <main class="container">
     <section id="about">
       <p class="muted">
-        <strong>BruhAhhchive</strong>는 블루아카이브 세계관에서 영감을 받은 비상업적 팬메이드 프로젝트로, 친구들과 함께 즐기는 멀티플레이 FPS 경험을 목표로 합니다.<br><br>
+        <strong>BrokenArchive</strong>는 블루아카이브 세계관에서 영감을 받은 비상업적 팬메이드 프로젝트로, 친구들과 함께 즐기는 멀티플레이 FPS 경험을 목표로 합니다.<br><br>
         📺 <a href="https://www.youtube.com/@peroro-education" target="_blank">제작자 YouTube 채널</a><br>
         ✉️ 문의: <a href="mailto:peroroedu@gmail.com">peroroedu@gmail.com</a>
       </p>
