--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>개인정보처리방침 — BruhAhhchive</title>
-  <meta name="description" content="BruhAhhchive 개인정보처리방침" />
+  <title>개인정보처리방침 — BrokenArchive</title>
+  <meta name="description" content="BrokenArchive 개인정보처리방침" />
   <meta name="color-scheme" content="dark light" />
   <style>
     :root { --bg:#0b0d10; --fg:#e8eef5; --muted:#9fb3c8; --card:#12151a; }
@@ -30,7 +30,7 @@
 
     <section class="card">
       <h2>제 1 조 (목적)</h2>
-      <p>“BruhAhhchive”(이하 “서비스”)는 개인이 취미로 개발한 비상업적 팬 프로젝트입니다. 본 서비스는 이용자의 개인정보를 수집·보관·이용하지 않으며, 회원가입이나 로그인 기능 또한 제공하지 않습니다.</p>
+      <p>“BrokenArchive”(이하 “서비스”)는 개인이 취미로 개발한 비상업적 팬 프로젝트입니다. 본 서비스는 이용자의 개인정보를 수집·보관·이용하지 않으며, 회원가입이나 로그인 기능 또한 제공하지 않습니다.</p>
 
       <h2>제 2 조 (개인정보의 수집 및 이용)</h2>
       <ul>
@@ -63,7 +63,7 @@
         <a href="/">홈</a>
         <a href="/privacy-policy.html">개인정보처리방침</a>
       </nav>
-      <div class="tiny">© 2025 BruhAhhchive — Fanmade, Non-commercial. This site does not collect personal data.</div>
+      <div class="tiny">© 2025 BrokenArchive — Fanmade, Non-commercial. This site does not collect personal data.</div>
     </footer>
   </main>
 </body>
